# nvim-project-tasks

./: .gitattributes  .gitignore  LICENSE  README.md
doc/: project-tasks.txt
examples/: .project-tasks.json
lua/project-tasks/: backends.lua  detect.lua  init.lua  presets.lua  runner.lua  session.lua
plugin/: project-tasks.lua
tests/: minimal_init.lua  pyproject.toml  tasks.py
tests/fixtures/cmake-configure-presets-only/: CMakeLists.txt  CMakePresets.json
tests/fixtures/cmake-no-binarydir/: CMakeLists.txt  CMakePresets.json
tests/fixtures/cmake-no-presets/: CMakeLists.txt
tests/fixtures/cmake-no-presets/src/: main.cpp
tests/fixtures/cmake-presets/: CMakePresets.json
tests/fixtures/cmake-presets/src/: main.cpp
tests/fixtures/python-uv/: pyproject.toml
tests/fixtures/python-uv/src/: __init__.py  main.py
tests/fixtures/python-uv/tests/: test_main.py
tests/helpers/: init.lua
tests/python/: __init__.py  conftest.py  nvim_driver.py  test_functional.py  test_integration.py
tests/unit/: detect_spec.lua  init_spec.lua  presets_spec.lua  runner_spec.lua  session_spec.lua
