[project]
name = "project-tasks-nvim-tests"
version = "0.1.0"
description = "Test suite for project-tasks.nvim"
requires-python = ">=3.11"
dependencies = [
    "pynvim>=0.5.0",
    "pytest>=8.0.0",
    "pytest-timeout>=2.0.0",
    "invoke>=2.2.0",
]

[tool.pytest.ini_options]
testpaths = ["python"]
timeout = 120
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
